💪  feat: Adicao das tabelas para SP e Custos

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Dados de conexão
-SQLSERVER_HOST='SRVBMSENIORBD'
-SQLSERVER_DATABASE='sapiens_prod'
-SQLSERVER_USER='consulta'
-SQLSERVER_PASSWORD='Teste@123'
+SQLSERVER_HOST=SRVBMSENIORBD
+SQLSERVER_DATABASE=sapiens_prod
+SQLSERVER_USER=consulta
+SQLSERVER_PASSWORD=Teste@123
