--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.8"
 dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.0.3",
-    "pyodbc>=5.2.0",
     "python-dotenv>=1.0.1",
+    "sqlalchemy>=2.0.43",
     "xlrd>=2.0.2",
 ]
